--- a/sass.scss/base/_base.scss
+++ b/sass.scss/base/_base.scss
@@ -5,3 +5,10 @@ html {
     height: 100vw;
     list-style: none;
   }
+  body{
+    background-color: whitesmoke;
+  }
+main{
+  background-color: whitesmoke;
+}
+  
