--- a/sass.scss/layout/_header.scss
+++ b/sass.scss/layout/_header.scss
@@ -20,7 +20,8 @@ a {
 .proj-header {
   padding-top: 1%;
   padding-bottom: 2%;
-  box-shadow: 0px 18px 19px 0px rgb(0,0, 0, 0.2 );
+  box-shadow: 0px 8px 19px 0px rgb(0,0, 0, 0.2 );
+  background-color: white;
 }
 
 @media (max-width: 700px) {
