--- a/sass.scss/layout/_images.scss
+++ b/sass.scss/layout/_images.scss
@@ -25,6 +25,15 @@
   #Folie_Méricourt {
     background-image: url("../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
   }
+  .images_goût{
+    height: 350px;
+    background-size: cover;
+    background-position: 0 440px;
+    width: 100%;
+    }
+
+
+
   @media (max-width: 700px) {
 .images_goût{
     height: 250px;
@@ -33,9 +42,4 @@
     width: 100%;
     }
   }
-  .images_goût{
-    height: 250px;
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    }
+  
