--- a/sass.scss/layout/_pagestexte.scss
+++ b/sass.scss/layout/_pagestexte.scss
@@ -1,31 +1,9 @@
 
 
-Menu {
-  h3 {
-    margin-top: 2px;
-    margin-left: -12%;
-    font-weight: 500;
-  }
 
-  h4 {
-    margin-top: -15px;
-    margin-left: -12%;
-    font-weight: lighter;
-    font-size: 15px;
-    padding-bottom: 5px;
-  }
-
-  p {
-    margin-top: -39px;
-    margin-left: 90%;
-    padding-bottom: 10px;
-    font-size: 15px;
-    font-weight: 900;
-  }
-}
 h5 {
   margin-left: 13px;
-  margin-right: 87%;
+  margin-right: 0%;
   border-bottom: 3px solid #99E2D0;
   font-weight: lighter;
   padding-bottom: 5px;
@@ -76,30 +54,29 @@ h2 {
     margin-top: 0px;
     font-weight: 500;
     margin-left: -35px;
-    font-size: 16px;
+    font-size: 15px;
   }
 
   h4 {
     margin-top: -14px;
     font-weight: lighter;
-    font-size: 11px;
-    padding-bottom: 1px;
+    font-size: 13px;
+    padding-bottom: 0px;
     margin-bottom: 0px;
     margin-left: -35px;
   }
 
   p {
-    margin-top: -15px;
-    margin-bottom: 5px;
-    margin-left: 83%;
+    margin-top: -14px;
+     margin-left: 206px;
     font-size: 12px;
     font-weight: 900;
     transform: scale(1);
   }
 }
 h5 {
-  margin-left: 13px;
-  margin-right: 83%;
+  margin-left: 60px;
+  margin-right: 70%;
   border-bottom: 3px solid #99E2D0;
   font-weight: lighter;
   padding-bottom: 5px;
@@ -121,6 +98,11 @@ h5 {
     margin-top: -20px;
   }
 
+  i:hover{
+    font-weight: 900;
+    color: violet;
+  }
+  
   h2 {
     margin-bottom: -28px;
     font-family: Shrikhand;
@@ -129,7 +111,33 @@ h5 {
     font-size: 25px;
   }
 }
-
+@media screen and (min-width: 768px) and (max-width: 1024px) { 
+  .Menu{
+    h3 {
+      margin-top: 0px;
+      font-weight: 500;
+      margin-left: -13px;
+      font-size: 20px;
+    }
+  
+    h4 {
+      margin-top: -14px;
+      font-weight: lighter;
+      font-size: 18px;
+      padding-bottom: 0px;
+      margin-bottom: 0px;
+      margin-left: -15px;
+    }
+  
+    p {
+      margin-top: -14px;
+       margin-left: 645px;
+      font-size: 16px;
+      font-weight: 900;
+      transform: scale(1);
+    }
+  }
+}
 @media all and (max-width: 700px) {
 Menu {
   h3 {
@@ -228,7 +236,7 @@ transition-duration: 1000ms;
   }
   p {
     margin-top: -26px;
-    margin-left: 87%;
+    margin-left: 99%;
     font-size: 15px;
     font-weight: 900;
     transform: scale(1);
