--- a/sass.scss/layout/_pagestitre.scss
+++ b/sass.scss/layout/_pagestitre.scss
@@ -17,7 +17,8 @@ fondnoir {
 .Menu_texte {
   background-color: white;
   border-radius: 15px 15px 15px 15px;
-  width: 100%;
+  width: 200px;
+  height: 50px;
   margin: auto;
   box-shadow: 0px 0px 35px gainsboro;
   list-style: none;
@@ -28,16 +29,98 @@ fondnoir {
 .Menu_texte {
   padding-left: 45px;
   padding-top: 10px;
-  padding-bottom: 1%;
+  padding-right: 40px;
+  padding-bottom: 0px;
   margin-bottom: 20px;
   margin-left: 0px;
  
 }
 
+@media screen and (min-width: 768px) and (max-width: 1024px) { 
+  Menu {
+    h3 {
+      margin-top: 2px;
+      font-weight: 500;
+    }
+  
+    h4 {
+      margin-top: -15px;
+      font-weight: lighter;
+      font-size: 15px;
+      padding-bottom: 5px;
+    }
+  
+    p {
+      margin-top: -39px;
+      margin-left: 85%;
+      padding-bottom: 10px;
+      font-size: 15px;
+      font-weight: 900;
+    }
+  }
+  h5 {
+    margin-left: 13px;
+    margin-right: 95%;
+    border-bottom: 3px solid #99E2D0;
+    font-weight: lighter;
+    padding-bottom: 5px;
+    margin-top: 40px;
+  }
+  
+.titre {
+    background-color: whitesmoke;
+    margin-top: -50px;
+    padding-top: 15px;
+    padding-left: 15px;
+    border-radius: 50px 50px 0px 0px;
+    font-size: 19px;
+  
+    i {
+      margin-left: 84%;
+      font-weight: lighter;
+      font-size: 25px;
+      margin-top: -20px;
+    }
+  
+    h2 {
+      margin-bottom: -28px;
+      font-family: Shrikhand;
+      color: black;
+    }
+  }
+  fondnoir {
+    h1 {
+      margin-left: 25px;
+      font-size: 20px;
+      font-family: Shrikhand;
+      margin-top: 20px;
+    }
+  
+    i {
+      font-size: 13px;
+      margin-right: 5px;
+    }
+  }
+  
+  .Menu_texte {
+    background-color: white;
+    border-radius: 15px 15px 15px 15px;
+    width: 85%;
+    margin: auto;
+    box-shadow: 0px 0px 35px gainsboro;
+    list-style: none;
+  }
+  
+  
+  
+  .Menu_texte {
+    padding-left: 33px;
+    padding-top: 10px;
+    padding-bottom: 1%;
+    margin-bottom: 20px;
+  }
 
-
-
-
+}
 @media all and (max-width: 700px) {
     Menu {
       h3 {
@@ -107,7 +190,7 @@ fondnoir {
     .Menu_texte {
       background-color: white;
       border-radius: 15px 15px 15px 15px;
-      width: 90%;
+      width: 80%;
       margin: auto;
       box-shadow: 0px 0px 35px gainsboro;
       list-style: none;
