--- a/css/main.css
+++ b/css/main.css
@@ -1594,7 +1594,7 @@ fondnoir i {
 }
 
 #images__francaise {
-  background-image: url("../images/restaurants/Ménilmontant.jpg");
+  background-image: url("../images/restaurants/Menilmontant.jpg");
 }
 
 #images__enchantée {
@@ -1614,7 +1614,7 @@ fondnoir i {
 }
 
 #Cité_Rouge {
-  background-image: url("../images/restaurants/Ménilmontant.jpg");
+  background-image: url("../images/restaurants/Menilmontant.jpg");
 }
 
 #Folie_Méricourt {
