--- a/sass.scss/layout/_images.scss
+++ b/sass.scss/layout/_images.scss
@@ -2,7 +2,7 @@
     background-image: url("../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg")
     }
  #images__francaise{
-     background-image: url("../images/restaurants/Ménilmontant.jpg")
+     background-image: url("../images/restaurants/Menilmontant.jpg")
  }
 #images__enchantée{
     background-image: url("../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
@@ -19,7 +19,7 @@
   }
   
   #Cité_Rouge {
-    background-image: url("../images/restaurants/Ménilmontant.jpg");
+    background-image: url("../images/restaurants/Menilmontant.jpg");
   }
   
   #Folie_Méricourt {
